--- a/MonoNX/Resources/layout/activity_main.axml
+++ b/MonoNX/Resources/layout/activity_main.axml
@@ -28,6 +28,7 @@
 		android:minHeight="25px"
 		android:id="@+id/nxLog"
 		android:background="@drawable/back"
+		android:scrollbars="vertical"
 		android:layout_marginBottom="5.0dp"
 		android:layout_marginTop="40.0dp" />
 </RelativeLayout>
